--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -135,7 +135,7 @@ Paul Cezanne’s *Turning Road (Route Tournante)*, ca. 1905 (P.1978.PG.61), was 
 
 {% figuregroup '2' 'fig-4-9-a, fig-4-9-b' 'Paul Cezanne (French, 1839–1906), *Turning Road (Route Tournante)*, ca. 1905. Oil on canvas, 73 x 92 cm (28 3/4 x 36 1/4 in.). The Samuel Courtauld Trust, The Courtauld Gallery, London, P.1978.PG.61. (a) Raking light picture taken before the treatment in 1980. (b) Current state of the painting photographed in normal light. Image: The Courtauld Gallery, London' %}
 
-Edouard Manet’s *Au Bal—Marguerite de Conflans en Toilette de Bal,* 1870–80 (P.1978.PG.233), was treated the following year, in 1981, to address the buckling of the canvas recorded in raking-light photographs before treatment. Caroline Villers’s recommendation seemed to follow the successful precedent set by the treatment of the Cezanne painting: to carry out a cold-lining at low pressure. A change of plan is described with Villers’s typical understatement: “Although the tacking margin had not seemed to exhibit exceptional sensitivity to moisture . . . the canvas was found to be extremely responsive.”[^21] They switched to using Beva 371 with sailcloth at 60°C–65°C and using 12 "Hg vacuum-envelope pressure. The envelope system was designed to avoid textural changes, and the conservators also removed large slubs and residues from the reverse prior to lining. However, when reviewing the treatment with the aid of archive raking-light images, it did seem that there had been some increased weave emphasis. Despite this, the treatment was published by Hedley as an exemplar treatment the following year ({% cite 'Hedley and Villers 1982' '157' %}). It was interesting to reflect on this treatment with the expert group. It seemed to particularly highlight the change in attitudes toward lining over the thirty-eight years since this painting was treated. The consensus now would be to accept the deformations out of plane and to try to avoid lining for as long as possible.
+Edouard Manet’s *Au Bal—Marguerite de Conflans en Toilette de Bal,* 1870–80 (P.1978.PG.233), was treated the following year, in 1981, to address the buckling of the canvas recorded in raking-light photographs before treatment. Caroline Villers’s recommendation seemed to follow the successful precedent set by the treatment of the Cezanne painting: to carry out a cold-lining at low pressure. A change of plan is described with Villers’s typical understatement: “Although the tacking margin had not seemed to exhibit exceptional sensitivity to moisture . . . the canvas was found to be extremely responsive.”[^21] They switched to using Beva 371 with sailcloth at 60°C–65°C and using 12 "Hg vacuum-envelope pressure. The envelope system was designed to avoid textural changes, and the conservators also removed large slubs and residues from the reverse prior to lining. However, when reviewing the treatment with the aid of archive raking-light images, it did seem that there had been some increased weave emphasis. Despite this, the treatment was published by Hedley as an exemplar treatment the following year ({% cite 'Hedley and Villers 1982' '157' %}). It was interesting to reflect on this treatment with the expert group. It seemed to particularly highlight the change in attitudes toward lining over the thirty-eight years since this painting was treated. The consensus now would be to accept the deformations out of plane and to try to avoid lining for as long as possible.
 
 Edgar Degas’s *Lady with a Parasol*, ca. 1870–72 (P.1978.PG.87), was treated almost immediately after the Manet. The painting was first strip-lined using Permawear 122 and Beva 371, but during restretching the original canvas fractured along the turnover edge. At this point, close to the exhibition opening, it was decided to mend the tear locally and return to the painting after the show. The painting returned for treatment in 1983 in preparation for considerable travel as part of a loan to Japan and Australia, and the decision was taken to line the painting ([fig. 4.10](#fig-4-10)). Hedley, leading the treatment, selected Fabri-Sil, but adapted the process to incorporate solvent activation, which was concurrently investigated by Phenix in his research project ({% cite 'Phenix and Hedley 1984' %}). Using solvent activation, the peel strength of Fabri-Sil increased to approximately match a “strong wax-resin” formulation. Despite the treatment being among the early Fabri-Sil linings, our inspection of the painting found that the experimental method performed well: the impasto looks crisp and sharp, and the ground layer appears unchanged by the adhesive, with the lining remaining well adhered throughout.
 
@@ -145,17 +145,17 @@ Edgar Degas’s *Lady with a Parasol*, ca. 1870–72 (P.1978.PG.87), was treated
 
 Reflecting on past practice at both institutions, the impact that the sharing of knowledge had in the years surrounding the Greenwich lining conference was apparent. Both institutions were enthusiastic about adopting new methods, adhesives, and fabrics, underpinned by comparison with existing methods to ensure that new techniques were at least as good as old. Most treatments appear to have aged well thus far, although some adhesives and fabrics have unknown aging characteristics in the longer term.
 
-The variety of adhesives used by the NMM conservators was clustered around a very specific period: a few years before and after the 1974 conference. As organizers, the conservators wanted to explore all avenues of new materials and methods. The experimentation led to the elimination of unsuitable methods and materials, such as sturgeon glue linings and black polypropylene as lining support, and the refinement and adoption of methods and materials that fitted their collection and work ethos. The Courtauld showed how research conducted within the department informed choices of adhesives and fabrics.
+The variety of adhesives used by the NMM conservators was clustered around a specific period: a few years before and after the 1974 conference. As organizers, the conservators wanted to explore all avenues of new materials and methods. The experimentation led to the elimination of unsuitable methods and materials, such as sturgeon-glue linings and black polypropylene as lining support, and the refinement and adoption of methods and materials that fit their collection and work ethos. The Courtauld showed how research conducted within the department informed choices of adhesives and fabrics.
 
 The rationale behind structural treatments was explored through interviews with conservators and by reading the archival documentation. Reviewing treatments with our expert panel highlighted how much attitudes have changed over time and the lasting influence of minimalism that was ushered in by the Greenwich conference. Nowadays, the inclination is to resist intervention until the point of complete failure. The conclusion drawn from the 2019 examination was to prolong the life of existing linings by shoring up failures at turnover edges, reactivating old glues, or feeding in adhesive for localized delamination. Future research will explore this topic further by revisiting paintings identified as in need of lining—but not treated in the 1970s due to time or budget constraints—to assess their condition now.
 
 ## Acknowledgments
 
-The authors would like to thank the following persons and institutions. The Getty Foundation for funding this project. The expert panel: Simon Bobak and Tom Bobak (Bobak Conservation Studio, London), Elizabeth Hamilton-Eddy (conservator Emeritus at Royal Museums Greenwich), Trevor Cumine (private practice, London), and Tannar Ruuben (Metropolia University, Helsinki). The meeting participants: Rachel Turnbull and Alice Tate-Harte (English Heritage), Katey Twitchett-Young and Anna Cooper (Tate), Alice Aurand (freelance in Paris), Katya Belaia (National Trust), and Aisling Macken​ and Tom Barrow (RMG). The conservators interviewed for this project, in particular Gillian Lewis, Alan Cummings, and Alan Phenix. The conservation volunteers at the RMG for their assistance collating the NMM data.
+The authors would like to thank the following persons and institutions. The Getty Foundation for funding this project. The expert panel: Simon Bobak and Tom Bobak (Bobak Conservation Studio, London), Elizabeth Hamilton-Eddy (conservator emeritus at Royal Museums Greenwich), Trevor Cumine (private practice, London), and Tannar Ruuben (Metropolia University, Helsinki). The meeting participants: Rachel Turnbull and Alice Tate-Harte (English Heritage), Katey Twitchett-Young and Anna Cooper (Tate), Alice Aurand (freelancer in Paris), Katya Belaia (National Trust), and Aisling Macken​ and Tom Barrow (RMG). The conservators interviewed for this project, in particular Gillian Lewis, Alan Cummings, and Alan Phenix. The conservation volunteers at RMG for their assistance collating the NMM data.
 
 ## Appendix
 
-[Table 4.1](#table-4-1) lists the 17 paintings from the CIA and RMG collections that were examined by an expert panel for this study.
+[Table 4.1](#table-4-1) lists the seventeen paintings from the CIA and RMG collections that were examined by an expert panel for this study.
 
 {% figure 'table-4-1' %}
 
@@ -173,19 +173,19 @@ The authors would like to thank the following persons and institutions. The Gett
 
 [^4]: Lewis, interview.
 
-[^5]: Treatment report for BHC0636, 1967, mentions AW2/beeswax/elemi gum; treatment report for BHC0444, 1967–75, mentions AW2/wax; treatment report for BHC3019, 1968–69, mentions dammar/wax; treatment report for BHC3329, 1969-74, MS2/wax; treatment report for BHC3318, 1971, mentions colophony/wax; treatment report for BHC3283, 1978, mentions MS2/wax/colophony/elemi.
+[^5]: Treatment report for BHC0636, 1967, mentions AW2/beeswax/elemi gum; treatment report for BHC0444, 1967–75, mentions AW2/wax; treatment report for BHC3019, 1968–69, mentions dammar/wax; treatment report for BHC3329, 1969–74, mentions MS2/wax; treatment report for BHC3318, 1971, mentions colophony/wax; treatment report for BHC3283, 1978, mentions MS2/wax/colophony/elemi.
 
 [^6]: As seen in treatments for BHC3530 in 1972 and BHC2989 in 1971, respectively.
 
 [^7]: Treatment report for BHC0641.
 
-[^8]: Treatment report for BHC1674, Eduardo de Martino, *HMS* Edinburgh *on Anti-Torpedo Exercise,* 1887.
+[^8]: Treatment report for BHC1674, Eduardo de Martino, *HMS* Edinburgh *on Anti-Torpedo Exercise*, 1887.
 
 [^9]: Lewis, interview. The recipe was found in treatment reports for BHC2515, BHC0301, BHC1818, BHC0294, BHC2685, and BHC0274.
 
 [^10]: Samples were slotted in a display book and are part of the archives of RMG’s paintings conservation studio.
 
-[^11]: Board of Studies Meeting Minutes, November 10, 1998. Conservation and Technology Department Archive, Courtauld Institute of Art, London.
+[^11]: Board of Studies Meeting minutes, November 10, 1998. Conservation and Technology Department Archive, Courtauld Institute of Art, London.
 
 [^12]: University of London: Courtauld Institute of Art, 1998. *1997/98 Annual Report*, 18–19.
 
@@ -193,14 +193,16 @@ The authors would like to thank the following persons and institutions. The Gett
 
 [^14]: Dr. Christina Young joined the department as a lecturer in 2000. Her contributions to lining practice at the Courtauld have been widely published and are outside the scope of this paper.
 
-[^15]: Robert Bruce Gardner to Jocelin Weldon (Weldon UK Charitable Trust), May 15, 1995, General Correspondence, Conservation and Technology Department Archive, Courtauld Institute of Art, London.
+[^15]: Robert Bruce Gardner to Jocelin Weldon (Weldon U.K. Charitable Trust), May 15, 1995, General Correspondence, Conservation and Technology Department Archive, Courtauld Institute of Art, London.
 
-[^16]: Alan Cummings, interview conducted by Camille Polkownik, October 11, 2019.
+[^16]: Thanks to interviews with students at the time, we now know that hand linings were performed, as the lining table was broken and out of action.
 
-[^17]: Alan Phenix, interview conducted by Camille Polkownik, October 2, 2019.
+[^17]: Alan Cummings, interview conducted by Camille Polkownik, October 11, 2019.
 
-[^18]: This painting does not have an inventory number as it has not been accessioned.
+[^18]: Alan Phenix, interview conducted by Camille Polkownik, October 2, 2019.
 
-[^19]: FileMaker Pro database, Conservation and Technology Department, Courtauld Institute of Art, London.
+[^19]: This painting does not have an inventory number as it has not been accessioned.
 
-[^20]: Treatment report for Edouard Manet, *Au Bal—Marguerite de Conflans en Toilette de Bal* (P.1978.PG.233).
+[^20]: FileMaker Pro database, Conservation and Technology Department, Courtauld Institute of Art, London.
+
+[^21]: Treatment report for Edouard Manet, *Au Bal—Marguerite de Conflans en Toilette de Bal* (P.1978.PG.233).
