--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -124,7 +124,7 @@ Thanks to Jennifer Ginevra (TEFL/Cambridge educator) and Dan Butcovich Pieroni (
 
 [^3]: Like every conservation treatment, these phases are optional and the restorer evaluates whether it is necessary to perform each one of them from time to time.
 
-[^4]: Both Aquazol 200 and 500 were tested. See {% cite 'Arslanoglu 2003' '' '2004' %}. 
+[^4]: Both Aquazol 200 and 500 were tested. See {% cite 'Arslanoglu 2003' %}, {% cite 'Arslanoglu 2004' '' '2004' %}).
 
 [^5]: Extra-fine rabbit skin glue produced by *Le Franc & Bourgeois* was used to face the painting layers with Japanese paper sheets (Tengujo kashmir 9 g/m<sup>2</sup>). The sheets fixed around the perimeter were glued to the worktop to prevent shrinkage while the glue dried. The high refining degree of this glue guarantees good elasticity and very light color, reducing the risk of color changes in a painting made with such a lean oil.
 
