--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -40,7 +40,7 @@ Yarns are structures composed of fibers, and a yarn’s geometry is determined b
 
 To date, three standard methods are used to determine the strength of cellulosic fiber material: (1) the band-pulling method on plain textile structures ({% cite 'DIN 1999' %}); (2) the determination of the maximum tensile strength on single fibers ({% cite 'DIN 2009' %}); and (3) the determination of the maximum tensile strength on staple fibers ({% cite 'DIN 1996' %}). However, as already mentioned, none of these standard techniques fulfills the requirements applicable to original canvas samples. The comparison of the degree of cellulose polymerization with the maximum tensile strength of artificially aged linen (flax fabric), measured with the band-pulling method on plain-weave fabrics, did not yield a correlation ({% cite 'Von Reden 2018' %}). In this study, we propose that the influence of the fabric geometry during these measurements prevents the resulting values from faithfully resembling the molecular condition of the cellulose, and that the same applies to the determination of the maximum tensile strength on single yarn.
 
-In the research field of paper analysis, an alternative method for the analysis of single fiber strength is frequently applied to this problem: the determination of the zero-span tensile strength ({% cite 'TAPPI 2007' %}). The special feature of this method is the fact that the clamping distance is reduced to almost zero, and hence the strength of the fibers is measured at a defined position. In this way, measurement errors arising from the heterogeneity of the material along the overall length of the sample are minimized. In the international literature, the resulting value is called zero-span tensile strength ({% cite 'Henniges and Potthast 2015' %}; {% cite 'Henniges and Potthast 2000' %}). Applying the zero-span tensile strength test method to yarn would represent an important technical advancement.
+In the research field of paper analysis, an alternative method for the analysis of single fiber strength is frequently applied to this problem: the determination of the zero-span tensile strength ({% cite 'TAPPI 2007' %}). The special feature of this method is the fact that the clamping distance is reduced to almost zero, and hence the strength of the fibers is measured at a defined position. In this way, measurement errors arising from the heterogeneity of the material along the overall length of the sample are minimized. In the international literature, the resulting value is called zero-span tensile strength ({% cite 'Henniges and Potthast 2000' %}, {% cite 'Henniges and Potthast 2015' '' '2015' %}). Applying the zero-span tensile strength test method to yarn would represent an important technical advancement.
 
 Previous studies have reported on this topic, but to date no standardized protocol or validation of the method exists ({% cite 'Hackney and Hedley 1984' %}; {% cite 'Leene et al. 1975' %}). Transferring this technique to the conservation of paintings, however, would be highly desirable. The goal of our work was to investigate the applicability of the zero-span tensile strength method to single yarns and to develop a standard protocol. The second aim was to use this technique to study samples derived from original canvas to assess its implementation in conservation research. The overarching question was whether a correlation exists between the intrinsic viscosity and the maximum tensile strength. This study was conducted at Dresden University of Fine Arts, Germany.
 
