--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -67,7 +67,7 @@ In the first phase of the Lining Project (1980s), we prepared samples with succe
 
 In our dimensional response study of 1985–86, we were surprised to see that samples taken from 47%–71% RH did not stabilize at their peak but began to shrink after only two hours at 71% RH. This was significantly lower than the \~85% RH we had presumed for onset of shrinkage based on tension studies prior to that date. By 1987, however, Hedley’s measurements ({% cite 'Hedley 1988' %}, {% cite 'Hedley 1993' '' '1993' %}) in our labs at CCI confirmed that a severe “shrinker,” when significantly prestressed, and before experiencing the permanent relaxation that occurs at 90% RH, could experience onset of shrinkage as early as 65% RH (see [fig. 19.2](#fig-19-2), double green broken line [10]). Such potential for shrinkage led to great caution in our use of humidity treatments in general.
 
-When using humidification tables for relaxation and flattening treatments, it is easy to produce higher humidity conditions than intended, particularly when that is combined with heat, even at low levels. Early monitoring of the Willard Multipurpose Table[^6] at CCI showed that even with a moderate setting of 76% RH and duct heating at 30°C, the humidity under the painting can rise to 90% RH and higher, due to the temperature difference between the warmer ducts and the cooler table surface. To reduce this risk, the conservator requested a monitoring system for RH under the painting ({% cite 'Daly Hartin et al. 2011' %}, {% cite 'Daly Hartin et al. 2015b' %}). By glancing at the computer display of conditions under an experimental painting—placed to one side of the painting being treated—the conservator could adjust the table settings to maintain safe levels of humidification.
+When using humidification tables for relaxation and flattening treatments, it is easy to produce higher humidity conditions than intended, particularly when that is combined with heat, even at low levels. Early monitoring of the Willard Multipurpose Table[^6] at CCI showed that even with a moderate setting of 76% RH and duct heating at 30°C, the humidity under the painting can rise to 90% RH and higher, due to the temperature difference between the warmer ducts and the cooler table surface. To reduce this risk, the conservator requested a monitoring system for RH under the painting ({% cite 'Daly Hartin et al. 2011' %}, {% cite 'Daly Hartin et al. 2015b' '' '2015b' %}). By glancing at the computer display of conditions under an experimental painting—placed to one side of the painting being treated—the conservator could adjust the table settings to maintain safe levels of humidification.
 
 ### Sensitivity of the Size Layer and Preventive Conservation Measures
 
