Added missing title and affiliation for paper 2, Eric Hagan
added title and affiliation

--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -7,6 +7,8 @@ order: 20
 contributor:
   - first_name: "Eric"
     last_name: "Hagan"
+    title: "Senior Conservation Scientist"
+    affiliation: "Canadian Conservation Institute"
 keywords:
 abstract: "Paintings on canvas are composite structures with mechanical properties that are difficult to characterize due to many complicated issues: the wide range of artists materials and techniques, which vary by region and time; the changing properties of materials with age and environmental exposure; and the addition of conservation treatments. Paintings are also composed of viscoelastic materials, which means that properties such as stiffness and extensibility are time and temperature dependent. This large matrix of variables makes it impossible to characterize the behavior of all paintings in the same way that an engineer might describe a distinct structure under a narrow window of conditions and boundary constraints. Valuable information is instead derived from materials testing of representative samples, development of simplified models, and expert knowledge from past successes and failures. As a result of the complexity, heuristics is often applied in conservation treatments. This paper provides a generalized overview of the mechanical behavior of paintings in tension and describes trends that help to refine the heuristics approach. The discussion is presented in the context of a viscoelastic (time-dependent) material model rather than elastic-plastic in order to highlight key concepts."
 ---
